# PyTransit

./: .f2py_f2cmap  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATIONS.bib  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README  README.md  gimenez.f90  makefile  pyproject.toml  requirements.txt  setup.py  test_accuracy.py  test_speed.py  version.py
.github/: dependabot.yml
.github/workflows/: python-package.yml
doc/: Makefile  requirements.txt
doc/source/: advanced.rst  conf.py  implemented_models.rst  index.rst  installation.rst  intro.rst  lpfs.rst  models.rst  opencl.rst  quickstart.rst
notebooks/: 001_simple_broadband_parameter_estimation.ipynb  01_broadband_parameter_estimation.ipynb  A1_impact_parameter_accuracy.ipynb  A2_Supersampling.ipynb  A_create_dataset.ipynb  Kepler_TDVs.ipynb  Orbits.ipynb  Orbits__transit_accuracy.ipynb  PyTransit_Example_1.ipynb  PyTransit_Example_2.ipynb  Supersampling.ipynb  Test_scalability.ipynb  core.py  example_chromosphere_model.ipynb  example_eclipse_model.ipynb  example_qpower2_model.ipynb  example_qpower2_opencl_model.ipynb  example_quadratic_model.ipynb  example_uniform_model.ipynb  osmodel_1.ipynb  osmodel_example_1.ipynb  osmodel_visualization_example.ipynb  ttv_model_example.ipynb
notebooks/contamination/: 2024_m_dwarf_host_example_plots.ipynb  2024_m_dwarf_host_example_simulations.ipynb  contamination_1_black_body_model.ipynb  contamination_2_physical_model.ipynb  contamination_3_comparison.ipynb  example_1a.ipynb  example_1b.ipynb  example_2a.ipynb  example_2b.ipynb
notebooks/data/: obs_data.fits
notebooks/oblate_planet_example/: figures.ipynb  opmodel_example_1.ipynb
notebooks/roadrunner/: roadrunner_model_example_1.ipynb  roadrunner_model_example_2.ipynb  roadrunner_model_example_3.ipynb  roadrunner_model_theory.ipynb  tsmodel_example_1.ipynb
notebooks/swift/: swift_model_example_1.ipynb  swift_model_example_2.ipynb  swift_model_example_3.ipynb
notebooks/tess_examples/: WASP-4b.ipynb
notebooks/tsmodel/: test_accuracy.ipynb
pytransit/: __init__.py  limb_darkening.py  version.py
pytransit/contamination/: __init__.py  contamination.py  filter.py  instrument.py  plotting.py
pytransit/loglikelihoods/: __init__.py  loglikelihood.py  wnloglikelihood.py
pytransit/lpf/: __init__.py  cntlpf.py  eclipselpf.py  logposteriorfunction.py  lpf.py  mclpf.py  mptlpf.py  ocllpf.py  ocltdvlpf.py  (+7 more)
src/: __init__.py  constants.py  eclipse.py  gimenez.f90  gimenez.py  limb_darkening.py  ma_lerp.cl  ma_quad.f90  ma_quadratic_nb.py  ma_uniform_nb.py  mandelagol.f90  mandelagol.py  mandelagol_cl.py  mandelagol_py.py  orbits.f90  orbits.py  orbits.pyf  orbits_cl.py  orbits_py.py  qpower2.py  qpower2_nb.py  qpower2_py.py  supersampler.py  tm.py  transitmodel.py  utils.f90  version.py
tests/: conftest.py  test_accuracy.py  test_basic.py  test_contamination.py  test_gimenez.py  test_import.py  test_jax_udmodel.py  test_jax_uniformdisk.py  test_lc.py  test_limb_darkening.py  test_ma.py  test_ma_cl.py  test_ma_quadratic.py  test_ma_quadratic_nb.py  test_multild.py  test_numba_udmodel.py  test_numba_udmodel_grad.py  test_qpower2_nb.py  test_roadrunner_eclipse.py  test_speed.py  test_transitmodel.py  test_transitmodel_helpers.py  test_uniform_model.py  test_uniform_model_nb.py  test_working.py  test_z.py  timing
(+227 files in other folders)
