[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTransit"
version = "2.6.7"
description = 'Fast and painless exoplanet transit light curve modelling.'
authors=[{name='Hannu Parviainen', email='hpparvi@gmail.com'}]
classifiers=[
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]

keywords = ['astronomy',  'astrophysics',  'exoplanets']
requires-python = ">= 3.8"
readme = "README.md"
license = {text = "GPLv2"}
dynamic = ["dependencies"]

[project.urls]
homepage = 'https://github.com/hpparvi/PyTransit'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pytransit"]
namespaces = true
